k8s/istio/ratelimit.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-ratelimit
  namespace: seckill
spec:
  selector:
    app: redis-ratelimit
  ports:
    - name: tcp
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-ratelimit
  namespace: seckill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-ratelimit
  template:
    metadata:
      labels:
        app: redis-ratelimit
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: redis
          image: swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: seckill
  labels:
    app: ratelimit
spec:
  selector:
    app: ratelimit
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080
    - name: grpc-port
      port: 8081
      targetPort: 8081
    - name: http-debug
      port: 6070
      targetPort: 6070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: seckill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  template:
    metadata:
      labels:
        app: ratelimit
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: ratelimit
          image: swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/envoyproxy/ratelimit:master
          command: ["/bin/ratelimit"]
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          volumeMounts:
            - name: config
              mountPath: /data/ratelimit/config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: ratelimit-config
