k8s/istio/envoyfilter-ratelimit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-ratelimit-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            domain: seckill
            failure_mode_deny: false
            enable_x_ratelimit_headers: DRAFT_VERSION_03
            timeout: 0.25s
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|8081||ratelimit.seckill.svc.cluster.local
              transport_api_version: V3
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-ratelimit-routes
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            route:
              name: command
      patch:
        operation: MERGE
        value:
          route:
            rate_limits:
              - actions:
                  - generic_key:
                      descriptor_key: PATH
                      descriptor_value: command
                  - remote_address: {}
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            route:
              name: query
      patch:
        operation: MERGE
        value:
          route:
            rate_limits:
              - actions:
                  - generic_key:
                      descriptor_key: PATH
                      descriptor_value: query
                  - remote_address: {}
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            route:
              name: admin
      patch:
        operation: MERGE
        value:
          route:
            rate_limits:
              - actions:
                  - generic_key:
                      descriptor_key: PATH
                      descriptor_value: admin
                  - remote_address: {}
